style.css
html {
  min-height: 100%;
  background: #16a085;
  background: -moz-linear-gradient(45deg, #16a085 0%, #f4d03f 100%);
  background: -webkit-gradient(left bottom, right top, color-stop(0%, #16a085), color-stop(100%, #f4d03f));
  background: -webkit-linear-gradient(45deg, #16a085 0%, #f4d03f 100%);
  background: -o-linear-gradient(45deg, #16a085 0%, #f4d03f 100%);
  background: -ms-linear-gradient(45deg, #16a085 0%, #f4d03f 100%);
  background: linear-gradient(45deg, #16a085 0%, #f4d03f 100%);
}

.link-text {
  text-decoration: underline;
  color: #fff;
}

.text-sm {
  font-size: 0.9em;
}

.text-box {
  height: 250px;
}

.title {
  font-family: 'Lobster Two', cursive;
  color: #fff;
  text-align: center;
  font-size: 4em;
  margin: 20px;
}

.subtitle {
  font-family: 'Lobster Two', cursive;
  color: #fff;
  text-align: center;
  font-size: 2.5em;
}


p {
  font-family: 'Cabin', sans-serif;
  color: #fff;
  font-size: 1.4em;
  margin: 20px;
  text-align: left;
}

.columns {
  margin-top: 40px;
}


.button {
  background: #fff;
  color: #16a085;
  margin: 30px 30px 0px 30px;
  -webkit-box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.2);
-moz-box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.2);
box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.2);
}

.button .is-large {
  margin: 60px;
}

.button:hover {
  background: #fff;
  -webkit-box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.7);
-moz-box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.7);
box-shadow: 0px 0px 7px 1px rgba(92,92,92,0.7);
top: -2px;
}


.text-center {
  text-align: center;
  margin: 0 auto;
}


#share-buttons img {
width: 35px;
padding: 5px;
border: 0;
box-shadow: 0;
display: inline;
}

